--- a/src/assets/Css/color.scss
+++ b/src/assets/Css/color.scss
@@ -11,6 +11,8 @@ $light-grey:rgba(122, 122, 122, 0.87);
 // background-color
 $primary-bg-color: #F2F2F2;
 $ref-bg:rgb(255, 255, 255);
+$checkout-bg:rgb(239, 245, 251);
+$bg-header:rgb(0, 102, 167);
 
 // border
 $border-bar:rgb(210, 210, 210);
@@ -18,3 +20,4 @@ $border-bar:rgb(210, 210, 210);
 // btn
 $blue:#0073aa;
 $disable-btn: grey;
+$checkout-btn:rgb(130, 187, 55);
