- cart qty, price updated - cart total qty and price -  hotfix in cart

--- a/src/assets/Css/styles.scss
+++ b/src/assets/Css/styles.scss
@@ -56,8 +56,8 @@ $utilities: (
     cursor: pointer;
 }
 
-.bg-light{
-    background-color: $red !important;
+.bg-header{
+    background-color: $bg-header !important;
 }
 
 .mr-n{
