--- a/src/assets/Css/cart.scss
+++ b/src/assets/Css/cart.scss
@@ -105,58 +105,47 @@
     .checkout-box{
         display: flex;
         flex-direction: column;
-        -webkit-box-pack: center;
         justify-content: center;
-        background: rgb(239, 245, 251);
+        background: $checkout-bg;
         position: absolute;
-        left: 0px;
+        // left: 0px;
         bottom: 0px;
         width: 100%;
-        height: 4rem;
-        padding: 1rem 0rem;
+        padding: 0.5rem 0rem;
         box-shadow: rgba(0, 0, 0 / 12%,0.12) 0px -0.56rem 0.62rem 0px;
         .checkout-total{
-            // width: 100%;
-            // position: absolute;
-            // top: 1rem;
-
-            // display: flex;
-            // -webkit-box-pack: justify;
-            // justify-content: space-between;
-            // -webkit-box-align: baseline;
-            // align-items: baseline;
-            .text{
-                
+            width: 90%;
+            margin: auto;
+            .checkout-amt{
+                width: 100%;
+                margin-bottom: 5px;
+                .checkout-text{
+                    font-size: 1.2rem;
+                    font-weight: bold;
+                }
             }
-            .total-amt{
-
+            .total-items {
+                .total-items-text{
+                    font-size: 0.8rem;
+                    font-weight: 500;
+                }
             }
-        }
-        .checkout-btn{
-            // position: absolute;
-            // top: 1rem;
-            position: absolute;
-            bottom: 0px;
-            cursor: pointer;
-            padding: 0.7em 1.5em;
-            width: 100%;
-            // height: 2.5rem;
-            background: rgb(130, 187, 55);
-            color: rgb(255, 255, 255);
-            a{
-                text-transform: uppercase;
-                font-weight: 600;
-                font-size: 0.9rem;
-
-                
+            .checkout-btn{
+                width: 100%;
+                background: $checkout-btn;
+                border: 1px solid transparent;
+                border-radius: 5px;
+                height: 2.5rem;
+                margin-top: 5px;
+                span{
+                    font-weight: 600;
+                    font-size: 0.9rem;
+                    color: rgb(255, 255, 255);
+                }
             }
         }
+        
 
     }
 }
 
-.checkout-text{
-    font-size: 1.2rem;
-    font-weight: bold;
-    margin-left: 1rem;
-}
